--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "ts-node-dev 'src/index.ts'",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "echo \"Error no test specified\" && exit 1"
+    "test": "echo \"Error no test specified\" && exit 1",
+    "test:funcional": "jest --projects ./test --runInBand"
   },
   "keywords": [
     "nodejs"
@@ -16,11 +17,16 @@
   "author": "Leandro Ribeiro <github@leandroribeiro.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.37",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   },
