--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Leandro Ribeiro <github@leandroribeiro.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.37",
@@ -31,6 +32,9 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.5",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2"
   }
 }
