--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error no test specified\" && exit 1",
-    "test:funcional": "jest --projects ./test --runInBand"
+    "test:funcional": "jest --projects ./test --runInBand",
+    "test:unit": "jest",
+    "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'"
   },
   "keywords": [
+    "node",
     "nodejs"
   ],
   "author": "Leandro Ribeiro <github@leandroribeiro.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
@@ -26,6 +31,7 @@
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
@@ -33,6 +39,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.5",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "module-alias": "^2.2.2"
