--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "ts-node-dev 'src/index.ts'",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "echo \"Error no test specified\" && exit 1",
+    "test": "yarn test:unit && yarn test:funcional",
     "test:funcional": "jest --projects ./test --runInBand",
     "test:unit": "jest",
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
@@ -26,7 +26,6 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
-    "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
