--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.5",
+    "@types/bcrypt": "^3.0.1",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
