--- a/.github/workflows/full-workflow.yml
+++ b/.github/workflows/full-workflow.yml
@@ -29,4 +29,6 @@ jobs:
 
     - name: Install dependencies
       run: yarn --frozen-lockfile
+    
+    - name: Run all tests
       run: yarn test
