--- a/.github/workflows/full-workflow.yml
+++ b/.github/workflows/full-workflow.yml
@@ -30,5 +30,17 @@ jobs:
     - name: Install dependencies
       run: yarn --frozen-lockfile
     
-    - name: Run all tests
-      run: yarn test
+#    - name: Run all tests
+#      run: yarn test
+
+    - shell: bash
+      if: github.ref ==  'refs/heads/master'
+      name: Create SSH deployment key
+      env:
+          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      run: ./scripts/deploy.sh
+
+    - name: Deployment
+      run: git remote add umbler ssh://git@kamino.deploy.umbler.com:9922/e8y7xzdk/leandro-io.git && git push umbler master
+      env:
+          CI: true
