--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/src/index.js",
-    "start:dev": "ts-node-dev 'src/index.ts'",
+    "start": "yarn build && node dist/src/index.js |  pino-pretty -c",
+    "start:dev": "ts-node-dev 'src/index.ts'  | pino-pretty -c",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "yarn test:unit && yarn test:funcional",
@@ -30,9 +30,11 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "@types/pino": "^6.3.8",
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
     "nock": "^13.0.11",
+    "pino-pretty": "^4.7.1",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
@@ -50,6 +52,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "pino": "^6.11.3"
   }
 }
