--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js |  pino-pretty -c",
-    "start:dev": "ts-node-dev 'src/index.ts'  | pino-pretty -c",
+    "start:dev": "ts-node-dev --transpile-only 'src/index.ts'  | pino-pretty -c",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "yarn test:unit && yarn test:funcional",
