--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/src/index.js |  pino-pretty -c",
+    "start": "yarn build && node dist/src/index.js",
     "start:dev": "ts-node-dev --transpile-only 'src/index.ts'  | pino-pretty -c",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
@@ -23,14 +23,16 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/config": "^0.0.38",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-pino-logger": "^4.0.2",
     "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.37",
+    "@types/pino": "^6.3.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
-    "@types/pino": "^6.3.8",
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
     "nock": "^13.0.11",
@@ -42,14 +44,20 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@overnightjs/core": "^1.7.5",
     "@types/bcrypt": "^3.0.1",
+    "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^8.5.1",
+    "D": "^1.0.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-pino-logger": "^6.0.0",
+    "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.3",
