--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.11",
     "@types/express-pino-logger": "^4.0.2",
     "@types/jest": "^26.0.22",
+    "@types/lodash": "^4.14.168",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.37",
     "@types/pino": "^6.3.8",
@@ -59,6 +60,7 @@
     "express-pino-logger": "^6.0.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.3",
     "pino": "^6.11.3"
