--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/src/index.js",
+    "start": "yarn build && node dist/src/index.js | pino-pretty -c",
     "start:dev": "ts-node-dev --transpile-only 'src/index.ts'  | pino-pretty -c",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
@@ -29,9 +29,11 @@
     "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.168",
     "@types/module-alias": "^2.0.0",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.37",
     "@types/pino": "^6.3.8",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
@@ -57,12 +59,14 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-openapi-validator": "^4.12.10",
     "express-pino-logger": "^6.0.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.3",
-    "pino": "^6.11.3"
+    "pino": "^6.11.3",
+    "swagger-ui-express": "^4.1.6"
   }
 }
