--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-pino-logger": "^4.0.2",
+    "@types/express-rate-limit": "^5.1.1",
     "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.168",
     "@types/module-alias": "^2.0.0",
+    "@types/moment": "^2.13.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.37",
     "@types/pino": "^6.3.8",
@@ -61,10 +63,12 @@
     "express": "^4.17.1",
     "express-openapi-validator": "^4.12.10",
     "express-pino-logger": "^6.0.0",
+    "express-rate-limit": "^5.2.6",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "pino": "^6.11.3",
     "swagger-ui-express": "^4.1.6"
