--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/src/index.js | pino-pretty -c",
-    "start:dev": "ts-node-dev --transpile-only 'src/index.ts'  | pino-pretty -c",
+    "start": "yarn build && node dist/src/index.js",
+    "start:dev": "dotenv -e .env -- ts-node-dev --transpile-only 'src/index.ts'  | pino-pretty -c",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "yarn test:unit && yarn test:funcional",
-    "test:funcional": "jest --projects ./test --runInBand",
-    "test:unit": "jest",
+    "test:funcional": "dotenv -e .env -- jest --projects ./test --runInBand",
+    "test:unit": "dotenv -e .env -- jest",
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
     "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'"
   },
@@ -38,6 +38,9 @@
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "@types/bcrypt": "^3.0.1",
+    "@types/http-status-codes": "^1.2.0",
+    "@types/jsonwebtoken": "^8.5.1",
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
     "nock": "^13.0.11",
@@ -51,15 +54,13 @@
   "dependencies": {
     "-": "^0.0.1",
     "@overnightjs/core": "^1.7.5",
-    "@types/bcrypt": "^3.0.1",
-    "@types/http-status-codes": "^1.2.0",
-    "@types/jsonwebtoken": "^8.5.1",
     "D": "^1.0.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "cors": "^2.8.5",
+    "dotenv-cli": "^4.0.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.12.10",
     "express-pino-logger": "^6.0.0",
