--- a/package.json
+++ b/package.json
@@ -22,25 +22,26 @@
   "license": "MIT",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^3.0.1",
     "@types/config": "^0.0.38",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-pino-logger": "^4.0.2",
     "@types/express-rate-limit": "^5.1.1",
+    "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.168",
     "@types/module-alias": "^2.0.0",
     "@types/moment": "^2.13.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.37",
+    "@types/node-cache": "^4.2.5",
     "@types/pino": "^6.3.8",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
-    "@types/bcrypt": "^3.0.1",
-    "@types/http-status-codes": "^1.2.0",
-    "@types/jsonwebtoken": "^8.5.1",
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
     "nock": "^13.0.11",
@@ -71,6 +72,7 @@
     "module-alias": "^2.2.2",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
+    "node-cache": "^5.1.2",
     "pino": "^6.11.3",
     "swagger-ui-express": "^4.1.6"
   }
